kubernetes/apps/dex/dex/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
spec:
  parentRefs:
    - namespace: envoy-gateway-system
      name: gateway
      sectionName: https
  hostnames:
    - auth.mrtb.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dex
          port: 5556
